src/app/tl-header/tl-header.component.scss
@import "~bootstrap/scss/bootstrap.scss";
@import "../shared/styles/tl-variables.scss";

:host {
  wvr-header-element {
    // Weaver Component overrides
    --wvr-navbar-padding: 0px;
    --wvr-font-family-sans-serif: var(--tl-font-family-sans-serif);
    --wvr-nav-link-font-size: var(--tl-nav-item-font-size);

    // Weaver Header Element Overrides
    --top-nav-height: 50px;
    --title-row-height: 85px;
    --bottom-nav-height: 65px;

    wvr-nav-list-element[top-navigation] > ul > wvr-nav-li-element > li > a {
      padding:12px;
      text-decoration: none;
    }

    wvr-nav-list-element[top-navigation] wvr-nav-li-element,
    wvr-nav-list-element[top-navigation] wvr-nav-li-element a {
      color: var(--tl-white);
      :hover , a:hover {
        color: var(--tl-black);
      }
    }

    // Weaver Nav List overrides for top navigation
    wvr-nav-list-element[top-navigation] wvr-nav-li-element,
    wvr-nav-list-element[top-navigation] .dropdown {
      --wvr-nav-link-background-hover: var(--tl-deep-yellow);
      --wvr-nav-li-width: contain;
      border-right: 1px solid #6a0000;
      line-height: 20px;

      wvr-dropdown-btn {
        text-align: center;
        padding: 12px;
      }
       > .dropdown-menu {
        width: 435px;
        border: 1px solid rgba(0,0,0,.15);
        text-align: left;
      }

      .hours wvr-dropdown-menu-item {
        text-align: center;
      }

      .libraries {
        h6 > a {
          color: #500000;
          text-decoration: underline;
        }
        p {
          color: #4d4d4d;
          a{
            color: #2b5d7d;
            text-decoration: underline;
          }
        }
        wvr-dropdown-menu {
          line-height: 0.6rem;
          margin-left: -20px;
          padding: 0px 15px;
        }
      }

      .information-for {

        a {
          color: #2b5d7d;
          text-decoration: none;
          line-height: 2;
          padding: 10px 20px;
        }
        a:hover {
          color: #23527c;
          text-decoration: underline;
        }
      }

      .help {
        wvr-dropdown-menu > wvr-dropdown-menu-item {
          border-bottom: 1px solid #e0e0e0;
          padding: 10px 0px;
          display: flex;

          a {
            color: #500000;
            padding: 8px 0px 8px 8px;
            text-decoration: none;
            width:100%;
          }
          > svg {
            fill: var(--tl-deep-grey);
            width: 35px;
            height: 35px;
            margin-right: 5px;
            background: var(--tl-white);
          }
        }

        wvr-dropdown-menu > wvr-dropdown-menu-item:hover > .helpLink {
          background: #b0b0b0;
          border-radius: 5px;
        }
        wvr-dropdown-menu > wvr-dropdown-menu-item:first-child,
        wvr-dropdown-menu > wvr-dropdown-menu-item:last-child {
          border-bottom: 0px;
        }
      }
    }

    wvr-nav-list-element[top-navigation] wvr-nav-li-element:first-child {
      border-left: 0px;
    }
    wvr-nav-list-element[bottom-navigation] wvr-nav-li {
      --wvr-nav-link-color: var(--tl-black);
      --wvr-nav-link-color-hover: var(--tl-white);
      --wvr-nav-link-background-hover: var(--tl-deep-grey);
    }

    .navbar-brand {
      font-size: var(--tl-default-font-size);
    }

    .h1 {
      font-size: var(--tl-h1-font-size);
    }

    .top-nav{
      border-bottom: 1px solid #333333;
      .container {
        > div {
          height: auto;
        }
      }
    }

    .mobile-menu-header {
      display: none;
    }

    @media (max-width: 767px) {
      --top-nav-height: auto;
      --wvr-nav-li-width: fit-content;
      header {
        box-shadow: 1px 1px 5px 2px #000;
      }
      .top-nav{
        border-bottom: 1px solid #333333;
        .container {
          > div {
            width: 100%;
          }
          > a.navbar-brand {
            margin: auto;
          }
        }
      }
      wvr-nav-list-element[top-navigation]  {
        ul {
          justify-content: space-evenly;
        }
        .dropdown,
        wvr-nav-li-element {
          flex: 1 1 auto;
          border-right: none;
        }
      }
      .title-row {
        text-align: center;
      }
      [bottom-navigation] {
        position: fixed;
        justify-content: flex-start;
        left: 0;
        top: 215px;
        background: #7ad9ff;
        width: 75%;
        opacity: 1;
        box-shadow: 4px 4px 7px -2px var(--tl-deep-grey);
        overflow: hidden;
        transition: width 0.5s ease-in-out, opacity 0.5s ease-in-out;
        li {
          border-bottom: 1px solid #85c0d8;
          font-weight: bold;
          a {
            justify-content: flex-start!important;
            padding: 15px;
          }
        }
        ul {
          flex-wrap: nowrap!important;
          flex-direction: column!important;
        }

      }
      [bottom-navigation].closed {
        width: 0px;
        opacity: 0;
      }
      .mobile-menu-header {
        display: flex;
        justify-content: flex-end;
        background: #000;
        color: #fff;
        width: 100%;
        padding: 12px 10px;
        li {
          font-weight: lighter;
          min-width: auto;
          border-bottom: none;
        }
        li:hover {
          background: transparent;
        }
      }
    }

  }
  .mobile-menu-button {
    display: none;
    margin-left: 10px;
    cursor: pointer;
  }

  @media (max-width: 767px) {
    .mobile-menu-button {
      display: block;
    }
  }
}

